# Pi_Rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/pi-agent/: Cargo.toml
crates/pi-agent/src/: branch_summary.rs  compaction.rs  fs_watch.rs  hooks.rs  lib.rs  mcp_bridge.rs  settings.rs  skills.rs  slash.rs  source_info.rs  subagent.rs  system_prompt.rs
crates/pi-agent/tests/: agent_tool_loop.rs  faux_harness.rs  ts_pi_regressions.rs
crates/pi-auth/: Cargo.toml
crates/pi-auth/src/: encrypted_file.rs  keyring_store.rs  lib.rs  oauth.rs  resolver.rs
crates/pi-bench/: Cargo.toml
crates/pi-bench/benches/: agent_loop.rs  comparable.rs  json_serialize.rs  session_append.rs  session_save.rs  token_estimate.rs  tool_dispatch.rs
crates/pi-bench/src/: lib.rs
crates/pi-cli/: Cargo.toml
crates/pi-cli/src/: auth.rs  main.rs  rpc.rs  update.rs
crates/pi-cli/tests/: cli_contract.rs
crates/pi-core/: Cargo.toml
crates/pi-core/src/: auth_guidance.rs  error_hints.rs  lib.rs  telemetry.rs  timings.rs
crates/pi-ext/: Cargo.toml
crates/pi-ext/src/: lib.rs  process.rs  wasm.rs  wrapper.rs
crates/pi-ext/tests/: extension_contract.rs
crates/pi-mcp/: Cargo.toml
crates/pi-mcp/src/: config.rs  lib.rs
crates/pi-permissions/: Cargo.toml
crates/pi-permissions/src/: landlock_apply.rs  lib.rs  sandbox.rs
crates/pi-permissions/tests/: sandbox_contract.rs
crates/pi-providers/: Cargo.toml
crates/pi-providers/src/: aliases.rs  anthropic.rs  aws_event_stream.rs  azure.rs  bedrock.rs  cloudflare.rs  copilot.rs  faux.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  openai_codex_responses.rs  openai_responses.rs  probe.rs  sigv4.rs  vertex.rs
crates/pi-providers/tests/: provider_contract.rs
crates/pi-rpc-client/: Cargo.toml
crates/pi-rpc-client/src/: lib.rs
crates/pi-session/: Cargo.toml
crates/pi-session/src/: export_html.rs  interop.rs  lib.rs  sqlite_index.rs
crates/pi-session/tests/: session_contract.rs
crates/pi-tools/: Cargo.toml
crates/pi-tools/src/: diff.rs  image_gen.rs  lib.rs  mutation_queue.rs  task.rs  todo.rs  truncate.rs  webfetch.rs  websearch.rs
crates/pi-tools/tests/: tool_contract.rs
crates/pi-tui/: Cargo.toml
crates/pi-tui/src/: clipboard.rs  completion.rs  config_selector.rs  editor.rs  footer.rs  keybindings.rs  lib.rs  markdown.rs  overlay.rs  session_picker.rs  terminal_image.rs  theme.rs
docs/: architecture.md  differentiators.md  extension-abi.md  ralph-loop.md  releasing.md
docs/contracts/: product-contract.md
docs/evidence/: comparative-bench.md  differential-suite.md  parity-ledger.md
docs/evidence/comparative/: pi-rs-wallclock-2026-05-14T02-45-20Z.txt  pi-rust-2026-05-14T02-45-20Z.txt  pi-rust-comparable.txt  pi_agent_rust-tools-2026-05-14T02-45-20Z.txt  pi_agent_rust-tools.txt  pi_agent_rust-wallclock-2026-05-14T02-45-20Z.txt
scripts/: run-comparative-benches.sh
tests/fixtures/: cli-help-required-flags.txt
