[package]
name = "pi-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
default = ["encrypted-file"]
encrypted-file = ["dep:chacha20poly1305"]
keyring = ["dep:keyring"]

[dependencies]
pi-core = { path = "../pi-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true, optional = true }
keyring = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
