[package]
name = "pi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
pi-agent = { path = "../pi-agent" }
pi-auth = { path = "../pi-auth", default-features = false, features = ["encrypted-file"] }
pi-core = { path = "../pi-core" }
pi-ext = { path = "../pi-ext" }
pi-mcp = { path = "../pi-mcp" }
pi-providers = { path = "../pi-providers" }
pi-session = { path = "../pi-session" }
pi-tools = { path = "../pi-tools" }
pi-tui = { path = "../pi-tui" }
clap = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
