[package]
name = "pi-ext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
pi-core = { path = "../pi-core" }
pi-permissions = { path = "../pi-permissions" }

[lints]
workspace = true
