[package]
name = "pi-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
pi-core = { path = "../pi-core" }
pi-auth = { path = "../pi-auth", default-features = false, features = ["encrypted-file"] }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
