[package]
name = "pi-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
default = []
sqlite-index = ["dep:rusqlite"]

[dependencies]
pi-core = { path = "../pi-core" }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
