[package]
name = "pi-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
pi-core = { path = "../pi-core" }
pi-permissions = { path = "../pi-permissions" }
pi-auth = { path = "../pi-auth", default-features = false, features = ["encrypted-file"] }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }
similar = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
